--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div style="padding: 45px 100px 100px 100px ; font-size: small;">
+    <div class="Top Paragraph" style="padding: 45px 100px 100px 100px ; font-size: small;" >
         <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed voluptatum iure deleniti repellat delectus?
                 Molestiae, pariatur autem iste sunt numquam ad itaque vel! Laudantium quis asperiores adipisci harum
@@ -24,9 +24,9 @@
                 cupiditate dignissimos nesciunt enim.t numquam ad itaque vel! Laudantium quis asperiores adipisci harum
                 reprehenderit distinctio, vitae mollitia modi fug </p>
         </div>
-    </br>
-</br>
-        <div>
+        </br>
+        </br>
+        <div class="Middle Lists">
 
             <li>
                 Lorem ipsum dolor sit, amet coxercitationem
@@ -67,6 +67,22 @@
             </br>
             </br>
             </br>
+            <div class= "Bottom Divs" style="font-size: 15px; text-align: justify; margin-bottom: 200px;">
+                <div style="float: left; width: 49%;">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+                    versions of Lorem Ipsum.</div>
+                <div style="float: right; width: 49%;">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+                    versions of Lorem Ipsum.</div>
+            </div>
         </div>
     </div>
 </body>
